[package]
name = "sqlite3-backup"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
aws-sdk-s3 = { version = "1.78.0", features = ["behavior-version-latest"] }
clap = { version = "4.5.32", features = ["derive"] }
futures = { version = "0.3.31", default-features = false }
jiff = "0.2.4"
sqlite3-sys = { version = "0.17.0", default-features = false, features = [
    "linkage",
    "bundled",
] }
tempfile = "3.18.0"
tokio = { version = "1", features = ["rt"] }
xz2 = { version = "0.1.7", features = ["static"] }
